# sql-tool

./: .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  EULA.md  LICENSE  NOTICE  README.md  SECURITY.md  enviornment.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
.pybuild/cpython3_3.12_sql-agent-tool/: .pydistutils.cfg  testfiles_to_rm_before_install
cli/: __init__.py  cli.py  shell_utils.py
cli-dev/: cli.py
cli/commands/: __init__.py  init.py  query.py  shell.py  update.py
database/: database_mysql.py  database_oracle_db.py  database_sqllite.py
debian/: README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sql-tool.cron.d.ex  sql-tool.doc-base.ex  watch.ex
debian/upstream/: metadata.ex
docs/: cli.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst
docs/_build/doctrees/: api.doctree  cli.doctree  contributing.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  cli.html  contributing.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sql_agent_tool/llm/: base.html
docs/_build/html/_sources/: api.rst.txt
sql_agent_tool/: __init__.py  config.py  core.py  exceptions.py  models.py  utils.py
sql_agent_tool/database/: __init__.py  database_base.py  database_mysql.py  database_postgresql.py  datbase_postgresql.py  factory.py  mssql.py
sql_agent_tool/llm/: base.py  deepseek.py  gemini.py  groq.py  model_validation.py  openai.py
tests/: test_mysql_database.py  test_postgresql.py
