[project]
name = "sql-agent-tool"
version = "0.1.0"
description = "A secure SQL tool for AI agents to interact with databases"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy>=2.0",
    "groq>=0.1",
    "pydantic>=2.0",
    "sqlparse>=0.4",
    "python-dotenv>=0.20"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"