[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-agent-tool"
version = "0.1.0"
description = "A secure SQL tool for AI agents to interact with databases"
readme = "README.md"
requires-python = ">=3.10"  # Matches your test environment
dependencies = [
    "sqlalchemy>=2.0",      # Database ORM
    "psycopg2-binary>=2.9", # PostgreSQL driver (added from latest)
    "groq>=0.1",            # Groq API for AI (from earlier)
    "pydantic>=2.0",        # Data validation
    "sqlparse>=0.4",        # SQL parsing (from earlier)
    "python-dotenv>=0.20"   # Environment variable loading (from earlier)
]
authors = [
    { name = "Harsh Dadiya", email = "harshdadiya@gmail.com" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sql-tool"
"Repository" = "https://github.com/yourusername/sql-tool"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",          # Testing framework (updated from earlier)
    "pytest-mock>=3.0",     # Mocking for tests (added from latest needs)
    "black>=23.0",          # Code formatting (from earlier)
    "flake8>=6.0"           # Linting (from earlier)
]